MB-6770 Add the recreate option to KVStore::delVBucket()

VBucket reset operation should delete a vbucket database file
and then recreate the empty database file. As the vbucket reset
operation internally invokes KVStore::delVBucket API, this API
should support the recreate option.

Change-Id: I70f429038a9ed572ddc5cc4e9ad046a257a27f66
Reviewed-on: http://review.couchbase.org/21189
Reviewed-by: Jin Lim <jin@couchbase.com>
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Karan Kumar <karan@couchbase.com>